# This is the tool that turns the package into a "wheel" which users can pip install
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "gala" 
version = "0.1.0"

authors = [
  { name="Ketan Sand", email="ketan.sand@mcgill.ca" },
]
description = "Codebase to listen to transient alert streams"
readme = "README.md"
license = {file = "LICENSE"}

# Use these to tag high level aspects of the package. See here: https://pypi.org/classifiers/
# classifiers=[ 
#         "Development Status :: 1 - Planning",
#         "Intended Audience :: Science/Research",
#         "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
#         "Operating System :: OS Independent",
#         "Programming Language :: Python :: 3"
# ]
# See here for recommended python version and other dependencies: 
# https://scientific-python.org/specs/spec-0000/#support-window
requires-python = ">=3.12" 
dependencies=[
    "numpy>=2.4.0",
    "scipy>=1.17.0",
    "pandas>=3.0.0",
    "requests>=2.34.0",
    "matplotlib>=3.10.0",
    "astropy>=7.2.0",
    "gcn-kafka>=0.3.4",
    "gwosc>=0.8.2",
    "kafka-python>=2.3.1",
    "ligo.skymap>=2.5.3",
    "notebook>=7.5.5",
    "pygcn>=1.1.3",
    "xmltodict>=1.0.4",
    "commitizen>=4.16.3",
]


# With these you can specify extra install options.
# Now `pip install candiamazing[dev]` will install
# the extra packages below along with the normal ones
[project.optional-dependencies]
dev = [
    "ruff",
    "pytest>=8.0,<9",
    "ipywidgets",
    "matplotlib",
    "mypy"
]

# # Allow your package to be called from the command line
# # [project.scripts]
# # candiamazing = "candiamazing.cli:main"


# [tool.hatch.version]
# source = "vcs"

# # This will automatically apply a version to the package when you make a new
# # release. See the README "Releases" section for more.
# [tool.hatch.build.hooks.vcs]
# version-file = "src/candiamazing/_version.py"

# [tool.hatch.version.raw-options]
# local_scheme = "no-local-version"

[tool.ruff]
# Apply to both src and tests by default
src = ["src", "tests"]
# maximum allowed line length
line-length = 100
# this ignores ambiguous variable names. Enable this if your project
# has a lot of equations with single character variables.
ignore = ["E741"]

[tool.ruff.format]
# use double quotes for strings.
quote-style = "double"
# indent with spaces, rather than tabs.
indent-style = "space"
# respect magic trailing commas.
skip-magic-trailing-comma = false

[tool.ruff.lint]
# Can expand this as far as user wants
select = [
 "E",   # pycodestyle (PEP8) errors
 "F",   # pyflakes
 "I",   # isort-like import sorting
 "B",   # bugbear (common bugs)
 "UP",  # pyupgrade (modern Python idioms)
]
[tool.ruff.lint.pydocstyle]
convention = "numpy"

# [tool.mypy]
# packages = ["candiamazing"]
# ignore_missing_imports = true
# strict = false